--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Bake
+title: PRimu_study
 author: GitHub User
 email: hye00525@naver.com
 description: > # this means to ignore newlines until "show_exerpts:"
@@ -10,7 +10,7 @@ show_excerpts: true # set to true to show excerpts on the homepage
 sass:
   sass_dir: _sass
 plainwhite:
-  name: Adam Denisov
+  name: PRimu
   tagline: Developer. Designer
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
