--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,23 @@
 theme: jekyll-theme-minimal
+
+markdown: kramdown
+# kramdown : markdown의 개조판.
+# markdown에서 불편한 사항을 개선한 형태.
+
+# MyData
+owner:
+  name:           Hyelim Park
+  avatar:         cat.jpg
+  bio:            B.S in Computer Science
+  email:          hye00525@naver.com
+  # Social networking links used in footer. Update and remove as you like.
+  twitter:
+  facebook:
+  github:
+  stackexchange:
+  linkedin:
+  instagram:      heherimu
+  flickr:
+  tumblr:
+  # google plus id, include the '+', eg +mmistakes
+  google_plus:
