--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-minimal
 # Jekyll configuration
 markdown: kramdown
 # kramdown : markdown의 개조판.
-# markdown에서 불편한 사항을 개선한 형태.
+# markdown에서 불편한 사항을 개선한 형태
 
 # MyData
 owner:
