--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ author:
       url: "hye00525@cglab.snu.ac.kr"
     - label: "naver blog"
       icon: "fas fa-fw fa-link"
-      url: "https://blog.naver.com/hye00525"
+      #url: "https://blog.naver.com/hye00525"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
