--- a/_config.yml
+++ b/_config.yml
@@ -97,8 +97,7 @@ author:
   name             : "Rimu"
   avatar           : "/assets/images/gucci.jpg"
   bio              : 
-  "진리는 구글에
-  공부 & 삽질 블로그"
+  "진리는 구글에"
   location         : "Seoul, Korea"
   email            : "hye00525@cglab.snu.ac.kr"
   links:
